Bug 263346 - partition type is not updating when filesystem change/formating
Summary: partition type is not updating when filesystem change/formating
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Lanz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-16 19:29 UTC by Maximilian Gerhard
Modified: 2011-08-28 15:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maximilian Gerhard 2011-01-16 19:29:57 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Partitionmanager does not change the partition type if you change the filesystem (e.g. format from ntfs to ext4). Only when changing NOT when delete and recreating the partition.

see fdisk -l the ID column that shows the partition type (e.g. 7 for ntfs)

Reproducible: Always

Steps to Reproduce:
- select an existing partition and open the partition properties
- change the filesystem via the combobox
- apply changes

Actual Results:  
- filesystem on the partition is changed correct but not the partition type
- open a shell an see fdisk -l output
- the partition type does not correspond to the filesystem

Expected Results:  
- filesystem and partition type on the partition is changed correct
- the partition type corresponds to the filesystem

GParted changes everything correct.

On Linux systems the partition type is not very important, everything will work too. But on Windows machines that bug causes problems. If the partition type of an NTFS partition is set to 83 Linux native partition, Windows will not mount that partition.
Comment 1 Volker Lanz 2011-08-28 15:29:27 UTC
SVN commit 1249913 by vlanz:

Update a partition's system type when creating a new file system on it.

BUG:263346


 M  +10 -1     backend/corebackendpartitiontable.h  
 M  +39 -3     jobs/createfilesystemjob.cpp  
 M  +7 -2      jobs/createfilesystemjob.h  
 M  +1 -1      ops/createfilesystemoperation.cpp  
 M  +1 -1      ops/newoperation.cpp  
 M  +16 -0     plugins/libparted/libpartedpartitiontable.cpp  
 M  +2 -1      plugins/libparted/libpartedpartitiontable.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1249913