Update a partition's system type when creating a new file system on it.

BUG:263346

svn path=/trunk/extragear/sysadmin/partitionmanager/; revision=1249913