src/plugins/libparted/libpartedpartitiontable.h
@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2010 by Volker Lanz <vl@fidra.de                        *
+ *   Copyright (C) 2010,2011 by Volker Lanz <vl@fidra.de                   *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -54,6 +54,7 @@ class LibPartedPartitionTable : public CoreBackendPartitionTable
 		virtual bool clobberFileSystem(Report& report, const Partition& partition);
 		virtual bool resizeFileSystem(Report& report, const Partition& partition, qint64 newLength);
 		virtual FileSystem::Type detectFileSystemBySector(Report& report, const Device& device, qint64 sector);
+		virtual bool setPartitionSystemType(Report& report, const Partition& partition);
 
 	private:
 		PedDevice* pedDevice() { return m_PedDevice; }
